--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,14 @@ header {
   font-size: 35px;
   color: white;
 }
-
+img {
+  display: block;
+  margin: 20px auto;
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
 nav {
   float: left;
   width: 30%;
